Fix close button spacing for hostname picker

--- a/app/components/hostname/hostname.css
+++ b/app/components/hostname/hostname.css
@@ -14,6 +14,6 @@
 
 .hostname-group .close {
     position: relative;
-    left: -20px;
+    left: -6px;
     top: 5px;
 }
